--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-09-13  Miguel Figueiredo  <elmig@debianpt.org>
+
+	* pt.po: Updated to 985t.
+
 2008-09-05  Clytie Siddall  <clytie@riverland.net.au>
 
 	* vi.po: Updated to 985t.
