--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ dpkg (1.14.23) UNRELEASED; urgency=low
 
   [ Updated dpkg translations ]
   * Greek (Emmanuel Galatoulas). Closes: #498585
+  * Portuguese (Miguel Figueiredo)
 
  -- Raphael Hertzog <hertzog@debian.org>  Fri, 05 Sep 2008 17:33:10 +0200
 
