libcompat: Check that vfprintf returns negative and not only EOF

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-09-14  Guillem Jover  <guillem@debian.org>
 
+	* libcompat/vsnprintf.c (vsnprintf): Check for negative return error
+	values instead of just EOF.
+
+2008-09-14  Guillem Jover  <guillem@debian.org>
+
 	* libcompat/snprintf.c (snprintf): Use vsnprintf instead of vsprintf.
 
 2008-09-14  Guillem Jover  <guillem@debian.org>
