--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2008-09-14  Guillem Jover  <guillem@debian.org>
 
+	* libcompat/vsnprintf.c (vsnprintf): Use the return value from
+	vfprintf as the formatted string size instead of using fstat to get
+	the file size.
+
+2008-09-14  Guillem Jover  <guillem@debian.org>
+
 	* libcompat/vsnprintf.c (vsnprintf): Check for negative return error
 	values instead of just EOF.
 
