libcompat: Use SEEK_SET instead of a literal value on fseek

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-09-14  Guillem Jover  <guillem@debian.org>
 
+	* libcompat/vsnprintf.c (vsnprintf): Use SEEK_SET instead of a 0
+	literal on fseek.
+
+2008-09-14  Guillem Jover  <guillem@debian.org>
+
 	* libcompat/vsnprintf.c (vsnprintf): Change size and nr types from
 	unsigled long to size_t. Always return the amount that would be
 	written regardless of any truncation. Do not read one byte less from
