libcompat: Remove unknown signal names from sys_siglist

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2008-09-14  Guillem Jover  <guillem@debian.org>
 
+	* libcompat/strsignal.c (sys_siglist): Remove array size from
+	declaration. Remove unknown signal names.
+	(strsignal): Use sizeof to compute the array size instead of NSIG.
+
+2008-09-14  Guillem Jover  <guillem@debian.org>
+
 	* libcompat/vsnprintf.c (vsnprintf): Use SEEK_SET instead of a 0
 	literal on fseek.
 
