--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-09-14  Guillem Jover  <guillem@debian.org>
 
+	* libcompat/strsignal.c (sys_siglist): Insert a NULL entry at the
+	beginning.
+
+2008-09-14  Guillem Jover  <guillem@debian.org>
+
 	* libcompat/strsignal.c (sys_siglist): Remove array size from
 	declaration. Remove unknown signal names.
 	(strsignal): Use sizeof to compute the array size instead of NSIG.
