libcompat: Change strings for unknown signal and error values

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-09-14  Guillem Jover  <guillem@debian.org>
 
+	* libcompat/strerror.c (strerror): Change string for unknown value.
+	* libcompat/strsignal.c (strsignal): Likewise.
+
+2008-09-14  Guillem Jover  <guillem@debian.org>
+
 	* libcompat/strsignal.c (strsignal): Do not return a string for
 	signal 0.
 
