libcompat: Rename scandir function name arguments

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2008-09-14  Guillem Jover  <guillem@debian.org>
 
+	* libcompat/compat.h (scandir): Rename arguments from select to
+	filter and compar to cmp.
+	* libcompat/scandir.c (scandir): Likewise.
+
+2008-09-14  Guillem Jover  <guillem@debian.org>
+
 	* libcompat/compat.h (alphasort): Change argument types to match
 	modern system ones (the current ones were missing one indirection
 	anyway).
