--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-09-13  Yuri Kozlov  <kozlov.y@gmail.com>
+
+	* ru.po: Updated to 985t.
+
 2008-09-13  Miguel Figueiredo  <elmig@debianpt.org>
 
 	* pt.po: Updated to 985t.
