--- a/po/ru.po
+++ b/po/ru.po
@@ -6,10 +6,10 @@
 # Yuri Kozlov <kozlov.y@gmail.com>, 2004, 2005, 2006, 2007, 2008.
 msgid ""
 msgstr ""
-"Project-Id-Version: dpkg 1.14.20\n"
+"Project-Id-Version: dpkg_po_ru\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2008-08-17 18:05+0300\n"
-"PO-Revision-Date: 2008-06-30 20:58+0400\n"
+"PO-Revision-Date: 2008-09-09 19:14+0400\n"
 "Last-Translator: Yuri Kozlov <kozlov.y@gmail.com>\n"
 "Language-Team: Russian <debian-l10n-russian@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -2818,7 +2818,7 @@ msgstr ""
 
 #: src/main.c:302
 msgid "<package status and progress file descriptor>"
-msgstr ""
+msgstr "<состояние пакета и файловый дескриптор хода выполнения>"
 
 #: src/main.c:322
 #, c-format
