--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ dpkg (1.14.23) UNRELEASED; urgency=low
   * Greek (Emmanuel Galatoulas). Closes: #498585
   * Portuguese (Miguel Figueiredo)
   * Russian (Yuri Kozlov). Closes: #499028
+  * Polish (Wiktor Wandachowicz).
 
  -- Raphael Hertzog <hertzog@debian.org>  Fri, 05 Sep 2008 17:33:10 +0200
 
