Fix typo in Russian translation of scripts

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,9 @@ dpkg (1.14.23) UNRELEASED; urgency=low
   * Russian (Yuri Kozlov). Closes: #499028
   * Polish (Wiktor Wandachowicz).
 
+  [ Updated scripts translations ]
+  * Fix typo in Russian. Closes: #499736
+
  -- Raphael Hertzog <hertzog@debian.org>  Fri, 05 Sep 2008 17:33:10 +0200
 
 dpkg (1.14.22) unstable; urgency=low
