--- a/scripts/po/ChangeLog
+++ b/scripts/po/ChangeLog
@@ -1,4 +1,4 @@
-2008-09-22  Christian Perrier  <bubulle@debian.org>
+2008-09-23  Yuri Kozlov  <kozlov.y@gmail.com>
 
 	* ru.po: Fix typo (#499736)
 
