dpkg-gensymbols: blacklist "__gnu_local_gp" symbol
* scripts/Dpkg/Shlibs/SymbolFile.pm: add "__gnu_local_gp" symbol
to the blacklist (mips/mipsel specific symbol that appeared with
GCC 4.3).

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-09-26  Thiemo Seufer  <ths@debian.org>
+
+	* scripts/Dpkg/Shlibs/SymbolFile.pm: add "__gnu_local_gp" symbol
+	  to the blacklist (mips/mipsel specific symbol that appeared with
+	  GCC 4.3).
+
 2008-09-05  Raphael Hertzog  <hertzog@debian.org>
 
 	* configure.ac: Bump version to 1.14.23~.
