libdpkg: Remove unused code in error_unwind

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-10-22  Guillem Jover  <guillem@debian.org>
+
+	* lib/ehandle.c (error_unwind): Remove unused cleanupentry code.
+
 2008-10-15  Guillem Jover  <guillem@debian.org>
 
 	* lib/dbmodify.c (modstatdb_shutdown): Use importanttmpfile on unlink
