--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,7 @@ dpkg (1.14.23) UNRELEASED; urgency=low
 
   [ Updated scripts translations ]
   * Fix typo in Russian. Closes: #499736
+  * Fix wrong transaltion in French. Closes: #504123
 
  -- Raphael Hertzog <hertzog@debian.org>  Fri, 05 Sep 2008 17:33:10 +0200
 
