--- a/scripts/po/ChangeLog
+++ b/scripts/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-11-01  Christian Perrier  <bubulle@debian.org>
+
+	* fr.po: Fix wrong translation (#504123)
+
 2008-09-23  Yuri Kozlov  <kozlov.y@gmail.com>
 
 	* ru.po: Fix typo (#499736)
