dpkg-shlibdeps: support RUNPATH exactly like RPATH
* scripts/Dpkg/Shlibs/Objdump.pm (_parse): Support RUNPATH exactly
like RPATH but taking precedence over it.

In reality RUNPATH is like RPATH but it's used after having looked in
directories listed in LD_LIBRARY_PATH while RPATH is used before (but only
if RUNPATH is not set). See dlopen and ld.so manual page. We ignore that
difference in the case of dpkg-shlibdeps as LD_LIBRARY_PATH is usually not
used except for cases where RPATH is not used when it really should have
been.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-11-08  Raphael Hertzog  <hertzog@debian.org>
+
+	* scripts/Dpkg/Shlibs/Objdump.pm (_parse): Support RUNPATH exactly
+	like RPATH but taking precedence over it.
+
 2008-10-22  Guillem Jover  <guillem@debian.org>
 
 	* lib/ehandle.c (error_unwind): Remove unused cleanupentry code.
