--- a/debian/changelog
+++ b/debian/changelog
@@ -79,6 +79,8 @@ dpkg (1.15.0) UNRELEASED; urgency=low
     Closes: #395140
   * Largely improve and update dpkg-buildpackage's manual page.
   * Clarify two points in dpkg-source(1). Closes: #490693
+  * Support RUNPATH exactly like RPATH in dpkg-shlibdeps. Closes: #502258
+    Thanks to Javier Serrano Polo <jasp00@terra.es>.
 
   [ Pierre Habouzit ]
   * Add a --query option to update-alternatives. Closes: #336091, #441904
