--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,10 @@ dpkg (1.14.23) UNRELEASED; urgency=low
     the including file.
   * Fix Dpkg::Version comparison code. Closes: #504135
 
+  [ Guillem Jover ]
+  * Untangle fatal abort condition from the “too many errors” one in the
+    archives and packages processing loop.
+
   [ Updated dpkg translations ]
   * Catalan (Jordi Mallach).
   * Greek (Emmanuel Galatoulas). Closes: #498585
