--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-11-11  Jordi Mallach  <jordi@debian.org>
+
+	* ca.po: Updated to 981t2f2u.
+
 2008-09-16  Wiktor Wandachowicz  <siryes@gmail.com>
 
 	* pl.po: Updated to 985t.
