German dpkg translation update

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-11-14  Sven Joachim  <svenjoac@gmx.de>
+
+	* de.po: Updated to 986t.
+
 2008-11-14  Guillem Jover  <guillem@debian.org>
 
 	* dpkg.pot: Regenerated. Formerly complete translations
