--- a/po/de.po
+++ b/po/de.po
@@ -8,10 +8,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Debian dpkg 1.14.21\n"
+"Project-Id-Version: Debian dpkg 1.14.23\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2008-11-14 10:21+0200\n"
-"PO-Revision-Date: 2008-08-18 23:17+0200\n"
+"PO-Revision-Date: 2008-11-14 10:33+0100\n"
 "Last-Translator: Sven Joachim <svenjoac@gmx.de>\n"
 "Language-Team: German <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -270,6 +270,8 @@ msgid ""
 "%s: unrecoverable fatal error, aborting:\n"
 " %s\n"
 msgstr ""
+"%s: nicht behebbarer fataler Fehler, Abbruch:\n"
+" %s\n"
 
 #: lib/ehandle.c:101
 msgid "out of memory pushing error handler: "
