Updated French translation

--- a/debian/changelog
+++ b/debian/changelog
@@ -23,6 +23,7 @@ dpkg (1.14.23) UNRELEASED; urgency=low
   * Polish (Wiktor Wandachowicz).
   * Portuguese (Miguel Figueiredo)
   * Russian (Yuri Kozlov). Closes: #499028
+  * French
 
   [ Updated scripts translations ]
   * Fix typo in Russian. Closes: #499736
