--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-11-14  Christian Perrier  <bubulle@debian.org>
+
+	* fr.po: Updated to 986t.
+
 2008-11-14  Sven Joachim  <svenjoac@gmx.de>
 
 	* de.po: Updated to 986t.
