Fix one fuzzy in French translation

--- a/scripts/po/fr.po
+++ b/scripts/po/fr.po
@@ -252,7 +252,7 @@ msgstr ""
 "uniquement passé\n"
 "  -C<fichier-desc> les changements sont décrits dans <fichier-desc>.  } à "
 "dpkg-genchanges\n"
-"  -si (défaut)   src inclut l'orig pour la révision 0 ou 1.           }\n"
+"  -si (défaut)   src inclut l'orig si nouvelle version amont.         }\n"
 "  -sa            le source envoyé inclut toujours l'orig.             }\n"
 "  -sd            le source envoyé ne comprend que le diff et le .dsc. }\n"
 "  -sn            force le format source natif Debian.      }\n"
