--- a/scripts/po/ChangeLog
+++ b/scripts/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-11-15  Christian perrier  <bubulle@debian.org>
+
+	* fr.po: Updated to 473t
+
 2008-11-14  Guillem Jover  <guillem@debian.org>
 
 	* dpkg-dev.pot: Regenerated.
