Korean and Russian translation updates

--- a/debian/changelog
+++ b/debian/changelog
@@ -22,8 +22,9 @@ dpkg (1.14.23) UNRELEASED; urgency=low
   * Greek (Emmanuel Galatoulas). Closes: #498585
   * Polish (Wiktor Wandachowicz).
   * Portuguese (Miguel Figueiredo)
-  * Russian (Yuri Kozlov). Closes: #499028
-  * French
+  * Russian (Yuri Kozlov). Closes: #499028, #505735
+  * French (Christian Perrier)
+  * Koren (Changwoo Ryu). Closes: #505777
 
   [ Updated scripts translations ]
   * Fix typo in Russian. Closes: #499736
