--- a/po/ko.po
+++ b/po/ko.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: dpkg\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2008-11-14 10:21+0200\n"
-"PO-Revision-Date: 2008-07-19 23:48+0900\n"
+"PO-Revision-Date: 2008-11-15 15:57+0900\n"
 "Last-Translator: Changwoo Ryu <cwryu@debian.org>\n"
 "Language-Team: Korean <debian-l10n-korean@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -267,6 +267,8 @@ msgid ""
 "%s: unrecoverable fatal error, aborting:\n"
 " %s\n"
 msgstr ""
+"%s: 복구 불가능한 치명적 오류, 중지합니다:\n"
+" %s\n"
 
 #: lib/ehandle.c:101
 msgid "out of memory pushing error handler: "
@@ -453,7 +455,7 @@ msgid ""
 " version value starts with non-alphanumeric, suggest adding a space"
 msgstr ""
 "`%s' 필드, `%.255s' 참조:\n"
-" 버전 값이 알파벳이나 숫자로 시작하지 않습니다, 공백을 더하면 됩니다"
+" 버전 값이 알파벳이나 숫자로 시작하지 않습니다, 공백을 추가하면 됩니다"
 
 #: lib/fields.c:414 lib/fields.c:417
 #, c-format
@@ -514,7 +516,7 @@ msgstr "dpkg 상태 데이터베이스의 잠금을 풀 수 없습니다"
 
 #: lib/lock.c:99
 msgid "you do not have permission to lock the dpkg status database"
-msgstr "dpkg 상태 데이터베이스를 잠글 수 있는 권한을 갖고 있지 않습니다"
+msgstr "dpkg 상태 데이터베이스를 잠글 수 있는 권한이 없습니다"
 
 #: lib/lock.c:100
 msgid "unable to open/create status database lockfile"
@@ -821,7 +823,7 @@ msgstr "패키지의 상태가 트리거 밀림이지만 밀린 트리거가 하
 
 #: lib/parse.c:295
 msgid "Package which in state not-installed has conffiles, forgetting them"
-msgstr "설치되지 않은 상태의 패키지가 conffiles를 갖고 있습니다. 잊어버립니다"
+msgstr "설치되지 않은 상태의 패키지에 설정 파일이 있습니다. 잊어버립니다"
 
 #: lib/parse.c:362
 #, c-format
@@ -1346,12 +1348,13 @@ msgstr "`%.255s' 설치"
 msgid ""
 "dpkg: considering deconfiguration of %s, which would be broken by %s ...\n"
 msgstr ""
-"dpkg: %2$s 패키지에 의해 망가질 수 있는 %1$s 패키지를 지우려 합니다...\n"
+"dpkg: %2$s 패키지에 의해 망가질 수 있는 %1$s 패키지를 설정을 해제하려 합니"
+"다...\n"
 
 #: src/archives.c:927
 #, c-format
 msgid "dpkg: yes, will deconfigure %s (broken by %s).\n"
-msgstr "dpkg: 네, %s 패키지를 지웁니다. (%s 패키지에 의해 망가졌음.)\n"
+msgstr "dpkg: 네, %s 패키지 설정을 해제합니다. (%s 패키지에 의해 망가졌음.)\n"
 
 #: src/archives.c:931 src/archives.c:1056
 #, c-format
@@ -1910,7 +1913,7 @@ msgstr "  %.250s 패키지는 지울 예정입니다.\n"
 #: src/depcon.c:271
 #, c-format
 msgid "  %.250s is to be deconfigured.\n"
-msgstr "  %.250s 패키지는 설정 해제할 에정입니다.\n"
+msgstr "  %.250s 패키지는 설정 해제할 예정입니다.\n"
 
 #: src/depcon.c:275
 #, c-format
@@ -1945,7 +1948,7 @@ msgstr "  %.250s 패키지는 %s.\n"
 #: src/depcon.c:356
 #, c-format
 msgid "  %.250s provides %.250s but is to be removed.\n"
-msgstr "  %.250s 패키지는 %.250s을(를) 제공하지만 지울 에정입니다.\n"
+msgstr "  %.250s 패키지는 %.250s을(를) 제공하지만 지울 예정입니다.\n"
 
 #: src/depcon.c:360
 #, c-format
@@ -2662,7 +2665,7 @@ msgstr ""
 "패키지 설치 및 지우기에 관한 도움말을 보려면 dpkg --help를 실행하십시오 "
 "[*].\n"
 "편리한 패키지 관리 시스템을 사용하려면 dselect나 aptitude을 사용하십시오.\n"
-"dpkg 디버그 플래그 값을 보려면 dpkg -Dhelp를 입력하십시오.\n"
+"dpkg 디버깅 플래그 값을 보려면 dpkg -Dhelp를 입력하십시오.\n"
 "강제 옵션에 대해 알아보려면 dpkg --force-help를 입력하십시오.\n"
 "저작권 관련 내용(GNU GPL)과 보증 안되는 내용을 보려면 dpkg --license를 입력하"
 "십시오 [*].\n"
@@ -2906,7 +2909,7 @@ msgstr ""
 #: src/packages.c:338
 #, c-format
 msgid "  Package %s which provides %s is to be removed.\n"
-msgstr "  %s 패키지는 %s을(를) 제공하지만 지울 에정입니다.\n"
+msgstr "  %s 패키지는 %s을(를) 제공하지만 지울 예정입니다.\n"
 
 #: src/packages.c:341
 #, c-format
@@ -4092,7 +4095,7 @@ msgid ""
 "dpkg-deb: file looks like it might be an archive which has been\n"
 "dpkg-deb:    corrupted by being downloaded in ASCII mode\n"
 msgstr ""
-"dpkg-deb: 파일이 마치 ASCII 모드로 내려 받는 과정에서\n"
+"dpkg-deb: 파일이 마치 ASCII 모드로 다운로드하는 과정에서\n"
 "dpkg-deb:    손상된 아카이브로 보입니다\n"
 
 #: dpkg-deb/extract.c:242
@@ -4335,7 +4338,7 @@ msgstr ""
 "옵션:\n"
 "  --showformat=<형식>              --show에서 사용할 형식을 따로 지정합니"
 "다.\n"
-"  -D                               디버그 정보를 출력하도록 설정합니다.\n"
+"  -D                               디버깅 정보를 출력하도록 설정합니다.\n"
 "  --old, --new                     아카이브 형식을 지정합니다.\n"
 "  --nocheck                        control 파일의 검사를 하지 않습니다(잘못"
 "된 \n"
@@ -4809,7 +4812,7 @@ msgstr "%s: 인수가 너무 많습니다"
 #: scripts/cleanup-info.pl:100 scripts/install-info.pl:305
 #, perl-format
 msgid "%s: failed to lock dir for editing! %s"
-msgstr "%s: 디렉토리 수정 위한 잠금 실패! %s"
+msgstr "%s: 편집에 필요한 디렉토리 잠금 실패! %s"
 
 #: scripts/cleanup-info.pl:102
 #, perl-format
@@ -5029,7 +5032,7 @@ msgid ""
 "  found `%s'"
 msgstr ""
 "<패키지>에 문제 발생\n"
-"  '%s' 지우던 도중\n"
+"  '%s' 지우는 중\n"
 "  '%s' 발견"
 
 #: scripts/dpkg-divert.pl:173
@@ -5310,12 +5313,12 @@ msgstr ""
 "  --info-file=<경로>       디렉토리에 설치할 info 파일을 지정합니다.\n"
 "  --dir-file=<경로>        info 디렉토리 파일의 파일 이름을 지정합니다.\n"
 "  --infodir=<디렉토리>     '--dir-file=<디렉토리>/dir'와 같습니다.\n"
-"  --info-dir=<디렉토리>    마찬가지로 같습니다.\n"
+"  --info-dir=<디렉토리>    위와 같습니다.\n"
 "  --keep-old               항목을 대체하거나 빈 항목을 지우지 않습니다.\n"
 "  --remove                 기본 이름 <파일이름>으로 지정한 항목을 지웁니다.\n"
 "  --remove-exactly         이름이 정확히 <파일이름>인 항목을 지웁니다.\n"
 "  --test                   테스트 모드를 사용합니다(실제 작업은 하지 않음).\n"
-"  --debug                  디버그 모드를 사용합니다(더 많은 정보를 표시합니"
+"  --debug                  디버깅 모드를 사용합니다(더 많은 정보를 표시합니"
 "다).\n"
 "  --quiet                  메시지를 출력하지 않습니다.\n"
 "  --help                   이 도움말 메시지를 표시합니다.\n"
