--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,11 @@
+2008-11-15  Changwoo Ryu  <cwryu@debian.org>
+
+	* ko.po: Updated to 986t.
+
+2008-11-15  Yuri Kozlov  <kozlov.y@gmail.com>
+
+	* ru.po: Updated to 985t1f.
+
 2008-11-14  Christian Perrier  <bubulle@debian.org>
 
 	* fr.po: Updated to 986t.
