Updated Swedih translation (986t0f0u).

--- a/debian/changelog
+++ b/debian/changelog
@@ -23,6 +23,7 @@ dpkg (1.14.23) UNRELEASED; urgency=low
   * Polish (Wiktor Wandachowicz).
   * Portuguese (Miguel Figueiredo)
   * Russian (Yuri Kozlov). Closes: #499028, #505735
+  * Swedish (Peter Krefting).
   * French (Christian Perrier)
   * Koren (Changwoo Ryu). Closes: #505777
 
