--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-11-15  Peter Krefting  <peterk@debian.org>
+
+	* sv.po: Updated to 986t.
+
 2008-11-15  Changwoo Ryu  <cwryu@debian.org>
 
 	* ko.po: Updated to 986t.
