Polish translation update

--- a/debian/changelog
+++ b/debian/changelog
@@ -26,6 +26,7 @@ dpkg (1.14.23) UNRELEASED; urgency=low
   * Swedish (Peter Krefting).
   * French (Christian Perrier)
   * Koren (Changwoo Ryu). Closes: #505777
+  * Polish (Wiktor Wandachowicz).
 
   [ Updated scripts translations ]
   * Fix typo in Russian. Closes: #499736
