--- a/debian/changelog
+++ b/debian/changelog
@@ -18,19 +18,17 @@ dpkg (1.14.23) UNRELEASED; urgency=low
 
   [ Updated dpkg translations ]
   * Catalan (Jordi Mallach).
+  * French (Christian Perrier)
   * German (Sven Joachim).
   * Greek (Emmanuel Galatoulas). Closes: #498585
+  * Korean (Changwoo Ryu). Closes: #505777
   * Polish (Wiktor Wandachowicz).
   * Portuguese (Miguel Figueiredo)
   * Russian (Yuri Kozlov). Closes: #499028, #505735
-  * Swedish (Peter Krefting).
-  * French (Christian Perrier)
-  * Koren (Changwoo Ryu). Closes: #505777
-  * Polish (Wiktor Wandachowicz).
 
   [ Updated scripts translations ]
   * Fix typo in Russian. Closes: #499736
-  * Fix wrong transaltion in French. Closes: #504123
+  * Fix wrong translation in French. Closes: #504123
   * Completed French.
 
  -- Raphael Hertzog <hertzog@debian.org>  Fri, 05 Sep 2008 17:33:10 +0200
