po/ro.po to 986t; fixed my name in the changelog, arf, arf Christian!

--- a/debian/changelog
+++ b/debian/changelog
@@ -25,6 +25,7 @@ dpkg (1.14.23) UNRELEASED; urgency=low
   * Polish (Wiktor Wandachowicz).
   * Portuguese (Miguel Figueiredo)
   * Russian (Yuri Kozlov). Closes: #499028, #505735
+  * Romanian (Eddy Petrișor).
 
   [ Updated scripts translations ]
   * Fix typo in Russian. Closes: #499736
