--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-11-16  Eddy Petrișor  <eddy.petrisor@gmail.com>
+
+	* ro.po: Updated to 986t.
+
 2008-11-15  Peter Krefting  <peterk@debian.org>
 
 	* sv.po: Updated to 986t.
@@ -80,7 +84,7 @@
 
 	* cs.po: Updated to 985t.
 
-2008-08-20  Eddy Petri?or <eddy.petrisor@gmail.com>
+2008-08-20  Eddy Petrișor <eddy.petrisor@gmail.com>
 
 	* ro.po: Updated to 985t.
 
@@ -129,7 +133,7 @@
 
 	* ru.po: Updated to 984t.
 
-2008-06-28  Eddy Petri?or <eddy.petrisor@gmail.com>
+2008-06-28  Eddy Petrișor <eddy.petrisor@gmail.com>
 
 	* ro.po: Updated to 984t.
 
