Russian translation update

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-11-16  Yuri Kozlov  <kozlov.y@gmail.com>
+
+	* ru.po: Updated to 986t.
+
 2008-11-16  Eddy Petrișor  <eddy.petrisor@gmail.com>
 
 	* ro.po: Updated to 986t.
