Spanish translation update

--- a/debian/changelog
+++ b/debian/changelog
@@ -26,6 +26,7 @@ dpkg (1.14.23) UNRELEASED; urgency=low
   * Portuguese (Miguel Figueiredo)
   * Russian (Yuri Kozlov). Closes: #499028, #505735
   * Romanian (Eddy Petrișor).
+  * Spanish (Javier Fernandez-Sanguino). Closes: #505836
 
   [ Updated scripts translations ]
   * Fix typo in Russian. Closes: #499736
