--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-11-16  Javier Fernández-Sanguino Peña  <jfs@computer.org>
+
+	* es.po: Updated to 985t1u.
+
 2008-11-16  Yuri Kozlov  <kozlov.y@gmail.com>
 
 	* ru.po: Updated to 986t.
