--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,6 +1,6 @@
 2008-11-16  Javier Fernández-Sanguino Peña  <jfs@computer.org>
 
-	* es.po: Updated to 985t1u.
+	* es.po: Updated to 986t.
 
 2008-11-16  Yuri Kozlov  <kozlov.y@gmail.com>
 
