Japanese translation update

--- a/debian/changelog
+++ b/debian/changelog
@@ -27,6 +27,7 @@ dpkg (1.14.23) UNRELEASED; urgency=low
   * Russian (Yuri Kozlov). Closes: #499028, #505735
   * Romanian (Eddy Petrișor).
   * Spanish (Javier Fernandez-Sanguino). Closes: #505836
+  * Japanese (Kenshi Muto).
 
   [ Updated scripts translations ]
   * Fix typo in Russian. Closes: #499736
