Norwegian Bokmål translation update

--- a/debian/changelog
+++ b/debian/changelog
@@ -22,6 +22,7 @@ dpkg (1.14.23) UNRELEASED; urgency=low
   * German (Sven Joachim).
   * Greek (Emmanuel Galatoulas). Closes: #498585
   * Korean (Changwoo Ryu). Closes: #505777
+  * Norwegian Bokmål (Hans F. Nordhaug).
   * Polish (Wiktor Wandachowicz).
   * Portuguese (Miguel Figueiredo)
   * Russian (Yuri Kozlov). Closes: #499028, #505735
