--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-11-17  Hans Fredrik Nordhaug <hans@nordhaug.priv.no>
+
+	* nb.po: Updated to 986t.
+
 2008-11-16  Javier Fernández-Sanguino Peña  <jfs@computer.org>
 
 	* es.po: Updated to 986t.
