--- a/po/nb.po
+++ b/po/nb.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: dpkg\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2008-11-14 10:21+0200\n"
-"PO-Revision-Date: 2008-08-31 20:55+0200\n"
+"PO-Revision-Date: 2008-11-17 01:59+0100\n"
 "Last-Translator: Hans Fredrik Nordhaug <hans@nordhaug.priv.no>\n"
 "Language-Team: Norwegian Bokmål <i18n-nb@lister.ping.ui.no>\n"
 "MIME-Version: 1.0\n"
@@ -264,6 +264,8 @@ msgid ""
 "%s: unrecoverable fatal error, aborting:\n"
 " %s\n"
 msgstr ""
+"%s: ugjenopprettelig kritisk feil, avbryter:\n"
+" %s\n"
 
 #: lib/ehandle.c:101
 msgid "out of memory pushing error handler: "
