Brazilian Portuguese translation update

--- a/debian/changelog
+++ b/debian/changelog
@@ -17,6 +17,7 @@ dpkg (1.14.23) UNRELEASED; urgency=low
     written content or with '#padding' lines. Closes: #497041, #499070
 
   [ Updated dpkg translations ]
+  * Brazilian Portuguese (Felipe Augusto van de Wiel).
   * Catalan (Jordi Mallach).
   * French (Christian Perrier)
   * German (Sven Joachim).
