--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-11-17  Felipe Augusto van de Wiel  <faw@debian.org>
+
+	* pt_BR.po: Updated to 986t.
+
 2008-11-17  Hans Fredrik Nordhaug <hans@nordhaug.priv.no>
 
 	* nb.po: Updated to 986t.
