Czech translation update

--- a/debian/changelog
+++ b/debian/changelog
@@ -19,6 +19,7 @@ dpkg (1.14.23) UNRELEASED; urgency=low
   [ Updated dpkg translations ]
   * Brazilian Portuguese (Felipe Augusto van de Wiel).
   * Catalan (Jordi Mallach).
+  * Czech (Miroslav Kure). Closes: #505910
   * French (Christian Perrier)
   * German (Sven Joachim).
   * Greek (Emmanuel Galatoulas). Closes: #498585
