--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-11-17  Miroslav Kure  <kurem@debian.cz>
+
+	* cs.po: Updated to 986t.
+
 2008-11-17  Felipe Augusto van de Wiel  <faw@debian.org>
 
 	* pt_BR.po: Updated to 986t.
