Slovak translation update

--- a/debian/changelog
+++ b/debian/changelog
@@ -29,6 +29,7 @@ dpkg (1.14.23) UNRELEASED; urgency=low
   * Portuguese (Miguel Figueiredo)
   * Russian (Yuri Kozlov). Closes: #499028, #505735
   * Romanian (Eddy Petrișor).
+  * Slovak (Ivan Masár). Closes: #506024
   * Spanish (Javier Fernandez-Sanguino). Closes: #505836
   * Japanese (Kenshi Muto).
 
