Update Portugueses dpkg translation

--- a/debian/changelog
+++ b/debian/changelog
@@ -26,7 +26,7 @@ dpkg (1.14.23) UNRELEASED; urgency=low
   * Korean (Changwoo Ryu). Closes: #505777
   * Norwegian Bokmål (Hans F. Nordhaug).
   * Polish (Wiktor Wandachowicz).
-  * Portuguese (Miguel Figueiredo)
+  * Portuguese (Miguel Figueiredo). Closes: #505869
   * Russian (Yuri Kozlov). Closes: #499028, #505735
   * Romanian (Eddy Petrișor).
   * Slovak (Ivan Masár). Closes: #506024
