--- a/po/pt.po
+++ b/po/pt.po
@@ -1,13 +1,13 @@
 # PT translation for dpkg.
 # Copyright (C) 2004 Free Software Foundation, Inc.
-# Miguel Figueiredo <elmig@debianpt.org>, 2004-2007.
+# Miguel Figueiredo <elmig@debianpt.org>, 2004-2008.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg 1.14\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2008-11-14 10:21+0200\n"
-"PO-Revision-Date: 2008-09-13 11:01+0100\n"
+"PO-Revision-Date: 2008-11-16 12:36+0000\n"
 "Last-Translator: Miguel Figueiredo <elmig@debianpt.org>\n"
 "Language-Team: Portuguese <traduz@debianpt.org>\n"
 "MIME-Version: 1.0\n"
@@ -265,6 +265,8 @@ msgid ""
 "%s: unrecoverable fatal error, aborting:\n"
 " %s\n"
 msgstr ""
+"%s: erro fatal irrecuperável, a abortar:\n"
+" %s\n"
 
 #: lib/ehandle.c:101
 msgid "out of memory pushing error handler: "
