--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-11-18  Miguel Figueiredo  <elmig@debianpt.org>
+
+	* pt.po: Updated to 986t.
+
 2008-11-18  Ivan Masár  <helix84@centrum.sk>
 
 	* sk.po: Updated to 986t.
