man: Add a proper header comment

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,9 @@
+2008-11-18  Guillem Jover  <guillem@debian.org>
+
+	* po/es.po: Add a proper header comment.
+	* po/hu.po: Likewise.
+	* po/pt_BR.po: Likewise.
+
 2008-11-11  Helge Kreutzmann  <debian@helgefjell.de>
 
 	* po/de.po: Updated to 1601t0f0u.
