--- a/man/po/es.po
+++ b/man/po/es.po
@@ -1,6 +1,6 @@
-# SOME DESCRIPTIVE TITLE
-# Copyright (C) YEAR Free Software Foundation, Inc.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# Spanish translation of the manpages in the dpkg package
+# This file is distributed under the same license as the dpkg package.
+# Copyright (C) FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
 #, fuzzy
 msgid ""
