--- a/man/po/hu.po
+++ b/man/po/hu.po
@@ -1,3 +1,7 @@
+# Hungarian translation of the manpages in the dpkg package
+# This file is distributed under the same license as the dpkg package.
+# Copyright (C) FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+#
 #, fuzzy
 msgid ""
 msgstr ""
