--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,5 +1,11 @@
 2008-11-18  Guillem Jover  <guillem@debian.org>
 
+	* po/es.po: Unfuzzy the control msgid.
+	* po/hu.po: Likewise.
+	* po/pt_BR.po: Likewise.
+
+2008-11-18  Guillem Jover  <guillem@debian.org>
+
 	* po/es.po: Add a proper header comment.
 	* po/hu.po: Likewise.
 	* po/pt_BR.po: Likewise.
