Add bug closure
Closes: #367226

--- a/debian/changelog
+++ b/debian/changelog
@@ -10,7 +10,7 @@ dpkg (1.14.23) UNRELEASED; urgency=low
 
   [ Guillem Jover ]
   * Untangle fatal abort condition from the “too many errors” one in the
-    archives and packages processing loop.
+    archives and packages processing loop. Closes: #367226
   * Abort on unrecoverable fatal errors instead of continuing execution, as
     the recovery code assumed the execution would not be reaching it again
     and some times bogus update files were created either with incompletely
