--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-dpkg (1.14.23) UNRELEASED; urgency=low
+dpkg (1.14.23) unstable; urgency=low
 
   [ Raphael Hertzog ]
   * Blacklist "__gnu_local_gp" symbol for dpkg-gensymbols. Closes: #500188
@@ -23,6 +23,7 @@ dpkg (1.14.23) UNRELEASED; urgency=low
   * French (Christian Perrier)
   * German (Sven Joachim).
   * Greek (Emmanuel Galatoulas). Closes: #498585
+  * Japanese (Kenshi Muto).
   * Korean (Changwoo Ryu). Closes: #505777
   * Norwegian Bokmål (Hans F. Nordhaug).
   * Polish (Wiktor Wandachowicz).
@@ -31,17 +32,16 @@ dpkg (1.14.23) UNRELEASED; urgency=low
   * Romanian (Eddy Petrișor).
   * Slovak (Ivan Masár). Closes: #506024
   * Spanish (Javier Fernandez-Sanguino). Closes: #505836
-  * Japanese (Kenshi Muto).
 
   [ Updated scripts translations ]
   * Fix typo in Russian. Closes: #499736
   * Fix wrong translation in French. Closes: #504123
-  * Completed French.
+  * French (Christian Perrier).
 
   [ Updated manpages translations ]
-  * Complete German.
+  * German (Helge Kreutzmann).
 
- -- Raphael Hertzog <hertzog@debian.org>  Fri, 05 Sep 2008 17:33:10 +0200
+ -- Guillem Jover <guillem@debian.org>  Tue, 18 Nov 2008 11:50:56 +0200
 
 dpkg (1.14.22) unstable; urgency=low
 
