--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-11-18  Guillem Jover  <guillem@debian.org>
+
+	* configure.ac: Release 1.14.23.
+
 2008-11-14  Guillem Jover  <guillem@debian.org>
 
 	* lib/ehandle.c (run_error_handler): In case of onerr_abort print an
