--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+dpkg (1.14.24) UNRELEASED; urgency=low
+
+  * 
+
+ -- Guillem Jover <guillem@debian.org>  Tue, 18 Nov 2008 12:40:33 +0200
+
 dpkg (1.14.23) unstable; urgency=low
 
   [ Raphael Hertzog ]
