po: Change charset to UTF-8 to match reality

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-11-18  Guillem Jover  <guillem@debian.org>
+
+	* es.po: Change charset to UTF-8 to match reality.
+
 2008-11-18  Miguel Figueiredo  <elmig@debianpt.org>
 
 	* pt.po: Updated to 986t.
