--- a/po/es.po
+++ b/po/es.po
@@ -11,11 +11,11 @@ msgstr ""
 "Project-Id-Version: Debian dpkg 1.14.22\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2008-11-14 10:21+0200\n"
-"PO-Revision-Date: 2008-11-16 12:05+0100\n"
+"PO-Revision-Date: 2008-11-18 13:01+0200\n"
 "Last-Translator: Javier Fernandez-Sanguino <jfs@debian.org>\n"
 "Language-Team: Debian L10n Spanish <debian-l10n-spanish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=ISO-8859-1\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8-bit\n"
 
 # "incapaz de..." queda demasiado literal. sv
