Added back ChangeLog entry that went missing.
Restore entry that got lost in commit 95d02da20de70ab25bfd2e40db7149f71bccc26d

--- a/debian/changelog
+++ b/debian/changelog
@@ -38,6 +38,7 @@ dpkg (1.14.23) unstable; urgency=low
   * Romanian (Eddy Petrișor).
   * Slovak (Ivan Masár). Closes: #506024
   * Spanish (Javier Fernandez-Sanguino). Closes: #505836
+  * Swedish (Peter Krefting).
 
   [ Updated scripts translations ]
   * Fix typo in Russian. Closes: #499736
