dpkg-source: fix to support POSIXLY_CORRECT=1
* scripts/Dpkg/Source/Functions.pm (fixperms): Fix chmod call to
also work when POSIXLY_CORRECT is set.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-11-19  Raphael Hertzog  <hertzog@debian.org>
+
+	* scripts/Dpkg/Source/Functions.pm (fixperms): Fix chmod call to
+	also work when POSIXLY_CORRECT is set.
+
 2008-11-11  Guillem Jover  <guillem@debian.org>
 
 	* scripts/dpkg-architecture.pl: Use new style functions calls.
