--- a/debian/changelog
+++ b/debian/changelog
@@ -83,6 +83,8 @@ dpkg (1.15.0) UNRELEASED; urgency=low
     Thanks to Javier Serrano Polo <jasp00@terra.es>.
   * Set Standards-Version to 3.8.0 (no changes needed).
   * Drop some unneeded lintian overrides.
+  * Fix a chmod call in dpkg-source to not fail when POSIXLY_CORRECT is set.
+    Closes: #506028
 
   [ Pierre Habouzit ]
   * Add a --query option to update-alternatives. Closes: #336091, #441904
