dpkg-shlibdeps: avoid spurious warnings due to bad parsing of objdump
* scripts/Dpkg/Shlibs/Objdump.pm (parse_dynamic_symbol): Fix the
regular expression to not require two space between alignment and
symbol name.
* scripts/t/200_Dpkg_Shlibs.t,
scripts/t/200_Dpkg_Shlibs/objdump.ls: Add a non-regression test
corresponding to the above case.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 dpkg (1.14.24) UNRELEASED; urgency=low
 
-  * 
+  [ Raphael Hertzog ]
+  * Fix parsing of objdump output (by dpkg-shlibdeps) in a special case where
+    the symbol name is separated only with a single space. Closes: #506139
 
  -- Guillem Jover <guillem@debian.org>  Tue, 18 Nov 2008 12:40:33 +0200
 
