--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2008-11-19  Raphael Hertzog  <hertzog@debian.org>
+
+	* scripts/Dpkg/Shlibs/Objdump.pm (parse_dynamic_symbol): Fix the
+	regular expression to not require two space between alignment and
+	symbol name.
+	* scripts/t/200_Dpkg_Shlibs.t,
+	scripts/t/200_Dpkg_Shlibs/objdump.ls: Add a non-regression test
+	corresponding to the above case.
+
 2008-11-18  Guillem Jover  <guillem@debian.org>
 
 	* configure.ac: Bump version to 1.14.24~.
