Mark strings for translation

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,19 @@
 2008-12-08  Guillem Jover  <guillem@debian.org>
 
+	* dpkg-deb/build.c (do_build): Mark strings for translation.
+	* dpkg-deb/extract.c (extracthalf): Likewise.
+	* dpkg-split/info.c (read_info): Likewise.
+	* dpkg-split/join.c (reassemble): Likewise.
+	* dpkg-split/queue.c (do_queue): Likewise.
+	* dselect/pkglist.cc (packagelist::packagelist): Likewise.
+	(packagelist::display): Likewise.
+	* lib/log.c (statusfd_send): Likewise.
+	* scripts/Dpkg/Source/Package/V1.pm (do_build): Likewise.
+	* src/filesdb.c (ensure_packagefiles_available): Likewise.
+	(ensure_statoverrides): Likewise.
+
+2008-12-08  Guillem Jover  <guillem@debian.org>
+
 	* dpkg-deb/extract.c (extracthalf): Improve internerr strings, and add
 	the invalid value provoking the call.
 	* dpkg-split/queue.c (discardsome): Likewise.
