Sanitize --status-fd output by replacing newlines with spaces
Closes: #505172

--- a/debian/changelog
+++ b/debian/changelog
@@ -53,6 +53,8 @@ dpkg (1.15.0) UNRELEASED; urgency=low
   * Add new option --procsched to start-stop-daemon to be able to set the
     process scheduling policy and priority. Closes: #175740
   * Add initial C unit test suite for libdpkg.
+  * Sanitize --status-fd output by replacing newlines with spaces.
+    Closes: #505172
 
   [ Raphael Hertzog ]
   * Enhance dpkg-shlibdeps's error message when a library can't be found to
