--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2009-01-22  Guillem Jover  <guillem@debian.org>
 
+	* lib/log.c (statusfd_send): Use varbufsubstc to replace new lines
+	with spaces.
+
+2009-01-22  Guillem Jover  <guillem@debian.org>
+
 	* lib/dpkg-db.h (varbufsubstc): New function prototype.
 	* lib/varbuf.c (varbufsubstc): New function definition.
 	* lib/test/t-varbuf.c (test_varbuf_substc): New function.
