libdpkg: In checksubprocerr return an explicit 0 instead of n

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2008-12-05  Guillem Jover  <guillem@debian.org>
 
+	* lib/mlib.c (checksubprocerr): Return an explicit 0 instead of n.
+
+2008-12-05  Guillem Jover  <guillem@debian.org>
+
 	* lib/ehandle.c (warning): Print the current program name and a
 	'warning' string.
 	* lib/mlib.c (checksubprocerr): Use warning() instead of a print
