dpkg-shlibdeps: don't merge all dependency templates when Build-Depends-Package is set.
* scripts/dpkg-shlibdeps.pl: Don't merge all dependency templates
into the generated dependency when Build-Depends-Package is
used in the symbols file. Instead simply modify the minimal
version on any pre-existing dependency.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-12-01  Modestas Vainius  <modestas@vainius.eu>
+
+	* scripts/dpkg-shlibdeps.pl: Don't merge all dependency templates
+	into the generated dependency when Build-Depends-Package is
+	used in the symbols file. Instead simply modify the minimal
+	version on any pre-existing dependency.
+
 2008-11-19  Raphael Hertzog  <hertzog@debian.org>
 
 	* scripts/Dpkg/Shlibs/Objdump.pm (parse_dynamic_symbol): Fix the
