--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,10 @@ dpkg (1.14.24) UNRELEASED; urgency=low
   [ Raphael Hertzog ]
   * Fix parsing of objdump output (by dpkg-shlibdeps) in a special case where
     the symbol name is separated only with a single space. Closes: #506139
+  * Fix dpkg-shlibdeps behaviour when Build-Depends-Package is used in the
+    symbols file. It was merging all dependency templates into the generated
+    dependency instead of simply modifying the minimal version. Thanks to
+    Modestas Vainius <modestas@vainius.eu>. Closes: #507346
 
  -- Guillem Jover <guillem@debian.org>  Tue, 18 Nov 2008 12:40:33 +0200
 
