--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-12-01  Guillem Jover  <guillem@debian.org>
+
+	* configure.ac: Bump version to 1.13.26~.
+
 2007-01-02  Guillem Jover  <guillem@debian.org>
 
 	* configure.ac: Release 1.13.25.
