Use the warning function instead of hand-coded print calls

--- a/debian/changelog
+++ b/debian/changelog
@@ -36,6 +36,7 @@ dpkg (1.15.0) UNRELEASED; urgency=low
   * Use a troff special character for the copyright symbol on man pages.
   * Mark program names in dpkg-trigger.1 in bold.
   * Unmark dselect debug messages for translation.
+  * Use a the warning function to uniformly print all warning messages.
 
   [ Raphael Hertzog ]
   * Enhance dpkg-shlibdeps's error message when a library can't be found to
