--- a/debian/changelog
+++ b/debian/changelog
@@ -86,6 +86,9 @@ dpkg (1.15.0) UNRELEASED; urgency=low
   * Drop some unneeded lintian overrides.
   * Fix a chmod call in dpkg-source to not fail when POSIXLY_CORRECT is set.
     Closes: #506028
+  * Optimize dpkg-shlibdeps by caching parsed symbols files and
+    objdump objects. Thanks to Modestas Vainius <modestas@vainius.eu> for the
+    patch. Closes: #503954
 
   [ Pierre Habouzit ]
   * Add a --query option to update-alternatives. Closes: #336091, #441904
