libdpkg: Add support for format strings to internerr

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2008-12-08  Guillem Jover  <guillem@debian.org>
 
+	* lib/dpkg.h (do_internerr): Reorder arguments. Support format
+	strings.
+	(internerr): Likewise.
+	* lib/ehandle.c (do_internerr): Likewise.
+
+2008-12-08  Guillem Jover  <guillem@debian.org>
+
 	* scripts/Dpkg/ErrorHandling.pm (@EXPORT): Remove 'failure'.
 	(failure): Remove function.
 	(syserr): Rename 'failure' string to 'error'.
