--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-12-08  Guillem Jover  <guillem@debian.org>
+
+	* scripts/Dpkg/ErrorHandling.pm (@EXPORT_OK): Move info, warning,
+	warnerror, error, errormsg, failure, syserr, internerr, subprocerr,
+	usageerr and syntaxerr to ...
+	(@EXPORT): ... here. Fix all users.
+
 2008-12-08  Modestas Vainius  <modestas@vainius.eu>
 	    Raphael Hertzog  <hertzog@debian.org>
 
