scripts: Do not mark internerr strings for translation

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2008-12-08  Guillem Jover  <guillem@debian.org>
 
+	* scripts/Dpkg/Deps.pm (implies): Do not mark internerr strings for
+	translation.
+	* scripts/Dpkg/Fields.pm (output): Likewise.
+	* scripts/Dpkg/Source/Package.pm (add_file): Likewise.
+
+2008-12-08  Guillem Jover  <guillem@debian.org>
+
 	* scripts/Dpkg/Deps.pm (parse): Do not use sprintf for warning.
 	(implies): Do not use sprintf for internerr.
 
