--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,23 @@
 2008-12-08  Guillem Jover  <guillem@debian.org>
 
+	* dpkg-deb/extract.c (extracthalf): Improve internerr strings, and add
+	the invalid value provoking the call.
+	* dpkg-split/queue.c (discardsome): Likewise.
+	* lib/dbmodify.c (modstatdb_init): Likewise.
+	* lib/dump.c (varbufdependency): Likewise.
+	* lib/parsehelp.c (varbufversion): Likewise.
+	* lib/vercmp.c (versionsatisfied3): Likewise.
+	* scripts/Dpkg/Source/Archive.pm (_add_entry): Likewise.
+	* src/archives.c (tarobject, archivefiles): Likewise.
+	* src/configure.c (deferred_configure, promptconfaction): Likewise.
+	* src/depcon.c (describedepcon, depisok): Likewise.
+	* src/enquiry.c (yettobeunpacked): Likewise.
+	* src/packages.c (packages, process_queue, dependencies_ok): Likewise.
+	* src/query.c (enqperpackage): Likewise.
+	* src/update.c (updateavailable): Likewise.
+
+2008-12-08  Guillem Jover  <guillem@debian.org>
+
 	* scripts/Dpkg/Deps.pm (implies): Do not mark internerr strings for
 	translation.
 	* scripts/Dpkg/Fields.pm (output): Likewise.
