Fix typo (lisf -> list)

--- a/debian/changelog
+++ b/debian/changelog
@@ -62,7 +62,7 @@ dpkg (1.15.0) UNRELEASED; urgency=low
   * dpkg-shlibdeps give less strong warnings for symbols not found in NEEDED
     libraries when the shared library is a non-public directory and is likely
     to be a plugin. Closes: #481165
-  * Clarify lisf of packages displayed by dpkg --get-selections and
+  * Clarify list of packages displayed by dpkg --get-selections and
     dpkg-query -l. Thanks to Jidanni. Closes: #487455
   * Document -A option in dpkg-buildpackage(1). Closes: #482834
   * Add some warning concerning the available file and the related commands.
