Error out when trying to replace a conffile w/o a Replaces field
Do not allow installing packages with non-obsolete conffiles owned by
other packages without a proper Replaces field. Closes: #508392

Regression introduced in commit 854ad168370000ca46f4ba091c2d5bb05274b6ef,
present since dpkg 1.13.14.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-12-20  Guillem Jover  <guillem@debian.org>
+
+	* src/archives.c (tarobject): Move a 'continue' inside a conditional
+	checking if the conffile to take over was obsolete on the other
+	package by adding missing bracese.
+
 2008-12-01  Raphael Hertzog  <hertzog@debian.org>
 
 	* scripts/Dpkg/Source/Archive.pm (extract): Do not create the temp
