--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,10 @@ dpkg (1.14.24) UNRELEASED; urgency=low
     from a non-writable directory when a target directory has been specified
     on the command line. Closes: #507217, #507219
 
+  [ Guillem Jover ]
+  * Do not allow installing packages with non-obsolete conffiles owned by
+    other packages without a proper Replaces field. Closes: #508392
+
   [ Updated dpkg translations ]
   * Galician (Marcellini Villarino). Closes: #509150
 
